[package]
authors = ["theduke <chris@theduke.at>"]
name = "crates_io_api"
description = "API client for crates.io (sparse-index backed implementation)"
license = "MIT/Apache-2.0"
repository = "https://github.com/LuuuXXX/crates-io-api"
documentation = "https://docs.rs/crates_io_api"
readme = "README.md"
keywords = ["crates", "api"]
categories = ["web-programming", "web-programming::http-client"]
edition = "2021"

version = "0.8.1"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
reqwest = { version = "0.11", default-features = false, features = ["blocking", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
url = "2.1"
log = "0.4"
futures = "0.3"
tokio = { version = "1.0", default-features = false, features = ["sync", "time"] }
semver = "1.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
